--- a/src/components/page-home/section-offer/section-offer.module.css
+++ b/src/components/page-home/section-offer/section-offer.module.css
@@ -206,6 +206,11 @@
     height: 32px;
   }
 
+  .icon svg {
+    width: 100%;
+    height: 100%;
+  }
+
   .serviceDescription {
     font-size: var(--font-size-body-sm);
   }
