--- a/src/components/page-services/section-growth/section-growth.module.css
+++ b/src/components/page-services/section-growth/section-growth.module.css
@@ -203,6 +203,11 @@
     height: 32px;
   }
 
+  .icon svg {
+    width: 100%;
+    height: 100%;
+  }
+
   .serviceDescription {
     font-size: var(--font-size-body-sm);
   }
