--- a/src/components/page-services/section-why-us/section-why-us.module.css
+++ b/src/components/page-services/section-why-us/section-why-us.module.css
@@ -192,6 +192,11 @@
     height: 32px;
   }
 
+  .icon svg {
+    width: 100%;
+    height: 100%;
+  }
+
   .reasonItem {
     margin-bottom: 3rem;
   }
